fixed contact from btn, added favicon to subpages

--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="KP Builders is a Utah General contracting firm specializing in remodels, additions, and outdoor structures. Visit our website today to get started.">
+  <meta name="description"
+    content="KP Builders is a Utah General contracting firm specializing in remodels, additions, and outdoor structures. Visit our website today to get started.">
   <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon">
-<link rel="icon" href="assets/favicon.ico" type="image/x-icon">
+  <link rel="icon" href="assets/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="./style/index.css">
   <script defer src="./js/date.js"></script>
   <script defer src="./js/collapse.js"></script>
@@ -41,14 +42,14 @@
           <form action="https://formsubmit.co/99ac8d502401381637abc5540601e1ca" method="POST">
             <h2>MAKE AND INQUIRY</h2>
             <label for="name">
-              <input type="text" name="name" id="name" placeholder="Name*" required >
+              <input type="text" name="name" id="name" placeholder="Name*" required>
             </label>
             <label for="email">
               <input type="email" name="email" id="email" placeholder="email">
             </label>
             <label for="phone">
-            <input type="tel" name="phone" id="phone" placeholder="Phone*" required>
-          </label>
+              <input type="tel" name="phone" id="phone" placeholder="Phone*" required>
+            </label>
             <select name="job type" id="jobType" required>
               <option value="" selected disabled>--Please choose an option--</option>
               <option value="bathroom">Bathroom</option>
@@ -128,7 +129,8 @@
             from foundations to framing and finish carpentry.</P>
         </article>
         <article class="services-card card">
-          <img class="services-card-img" src="./assets/outdoorSq1.jpg" alt="Stock image of a beautiful outdoor living space">
+          <img class="services-card-img" src="./assets/outdoorSq1.jpg"
+            alt="Stock image of a beautiful outdoor living space">
           <h3>DECKS AND OUTDOOR LIVING</h3>
           <P>There is no better way to enjoy a Northern Utah sunrise or stunning sunset than by sitting on your own
             private deck. We build to suit, using top-rated materials for our high desert climate. Ask for estimates on
@@ -199,7 +201,12 @@
       <section class="testimonial-container">
         <div class="testimonial-card card">
           <h3>Positive Communication</h3>
-          <p>“Kenny redid our deck and patio last summer, 2019. It was a positive experience from start to finish. He communicated with us on every step to be sure things were done the way we wanted. The final price ended up being a bit less than the quote because of a change we made that ended up using less materials. He was very professional and made sure everything was done to code. He arranged the inspection with the city, and it passed without a hitch. The deck itself feels so strong and looks great. We are loving our new outdoor living space!”</p>
+          <p>“Kenny redid our deck and patio last summer, 2019. It was a positive experience from start to finish. He
+            communicated with us on every step to be sure things were done the way we wanted. The final price ended up
+            being a bit less than the quote because of a change we made that ended up using less materials. He was very
+            professional and made sure everything was done to code. He arranged the inspection with the city, and it
+            passed without a hitch. The deck itself feels so strong and looks great. We are loving our new outdoor
+            living space!”</p>
           <strong>Nicole Heaton</strong>
           <p class="testimonial-sub">-Homeowner</p>
 
